--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext.hilt_version = "2.28-alpha"
+    ext.coroutine_version = "1.3.4"
+    ext.room_version = "2.2.5"
+    ext.nav_version = "2.2.2"
+    ext.lifecycle_extensions_version = "2.2.0"
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
