--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext.room_version = "2.2.5"
     ext.nav_version = "2.2.2"
     ext.lifecycle_extensions_version = "2.2.0"
+    ext.retrofit_version = "2.9.0"
+    ext.glide_version = "4.11.0"
 
     repositories {
         google()
