--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.lifecycle_extensions_version = "2.2.0"
     ext.retrofit_version = "2.9.0"
     ext.glide_version = "4.11.0"
+    ext.okhttp_logging_version = "4.6.0"
 
     repositories {
         google()
